responsive on BED

--- a/api/templates/election.html
+++ b/api/templates/election.html
@@ -4,12 +4,11 @@
 
 {% block content %}
 <!--Banner component -->
-<div class="bg-cover bg-center mt-1  h-auto text-white py-24 px-10 object-fill"
-    style="background-image: url(https://www.masikakoross.com/wp-content/uploads/2016/07/contact-top.jpg)">
+<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
+    style="background-image: url(../static/images/election.webp)">
     <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        <!-- <p class="font-bold text-sm uppercase">Services</p> -->
-        <h1 class="text-center   bell-bold font-bold text-2xl lg:text-4xl  text-white ">Election Law</h1>
-        <p class="text-md bell font-bold sm:text-xl md:text-2xl text-center ">
+        <h1 class="text-center   bell-extrabold     text-[#d13642] ">Election Law</h1>
+        <p class="bell-bold text-center text-[#d13642]">
             Discover our commitment to excellence and client satisfaction.
         </p>
         <!-- <button href="#" class="bg-purple-800 py-4 px-8 text-white font-bold uppercase text-xs rounded hover:bg-gray-200 hover:text-gray-800"> -->
@@ -41,12 +40,16 @@
 
 
 <!-- election section -->
-
+<div class="bg-white">
 <div class="sm:flex items-center max-w-7xl mx-auto">
     <div class="sm:w-1/2 p-10">
         <div class="image object-center text-center ">
             <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/election.webp" srcset="" alt="home">
         </div>
+
+
+
+        <!-- <img loading="lazy" decoding="async" width="1000" height="751" src="https://mmsadvocates.co.ke/wp-content/uploads/2023/05/Real-Estate.jpg" class="attachment-full" alt="" title="Real Estate" srcset="https://mmsadvocates.co.ke/wp-content/uploads/2023/05/Real-Estate.jpg 1000w, https://mmsadvocates.co.ke/wp-content/uploads/2023/05/Real-Estate-300x225.jpg 300w, https://mmsadvocates.co.ke/wp-content/uploads/2023/05/Real-Estate-768x577.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px"> -->
     </div>
     <div class="sm:w-1/2 p-5 md:mb- mb-24">
         <div class="text font">
@@ -65,5 +68,5 @@
         </div>
     </div>
 </div>
-
+</div>
 {% endblock %}
