--- a/api/templates/legal.html
+++ b/api/templates/legal.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 <!--Banner component -->
-<div class="bg-cover bg-center mt-1  h-auto text-white py-24 px-10 object-fill"
-    style="background-image: url(../static/images/contact-top.webp)">
+<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
+    style="background-image: url(../static/images/legal-top.webp)">
     <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        <h1 class="text-center   bell-bold font-bold text-2xl lg:text-4xl  text-white ">Legal Speak</h1>
-        <p class="text-md bell font-bold sm:text-xl md:text-2xl text-center">
+        <h1 class="text-center   bell-extrabold     text-white ">Legal Speak</h1>
+        <p class="bell-bold text-center">
             Discover our commitment to excellence and client satisfaction.
         </p>
 
@@ -35,9 +35,8 @@
 
 
 <!-- legal section -->
-
-<div class="my-auto mx-auto bg-blue-950 rounded-lg mt-0.5 mb-1">
-    <div class='py-10'>
+<div class="pt-10 pb-10 " style="background-color: rgb(244, 249, 252)">
+    <div class="py-10 ">
         <div
             class="max-w-md mx-auto xl:max-w-5xl font-poppins-b lg:max-w-5xl md:max-w-2xl bg-gray-700 max-h-screen shadow-2xl flex-row rounded relative">
             <div class="p-2 bg-blue-900  rounded-t-lg">
@@ -61,128 +60,111 @@
     </div>
 </div>
 
-
-
-
-
-<!-- components -->
-<div class="relative ">
-    <!-- featured articles section -->
-    <section data-aos="fade-up" data-aos-duration="1000" class="z-20 sticky top-0 "
-        style="background-color: rgb(244, 249, 252)">
-        <div class=" mb-1 mt-1 md:mb-4 py-8  lg:py-16 mx-auto max-w-7xl w-full px-4 sm:px-6 md:px-8 ">
-            <div class="">
-                <h2
-                    class="w-fit text-3xl font-bold  bell-bold text-[#d13642] sm:text-4xl   md:text-4xl  pb-1 px-2 mb-4 pb-1 px-2 rounded-md border-b-2 border-red-800 text-center md:text-left">
-                    Featured
-                    <span class="text-indigo-900">Articles</span>
-                </h2>
+<!-- Terms -->
+<section data-aos="fade-up" data-aos-duration="1000" class="py-10 bg-white sm:py-16 lg:py-24">
+    <div class="px-4 mx-auto sm:px-6 lg:px-8 max-w-7xl">
+        <div class="max-w-2xl mx-auto text-center">
+            <h2 class="bell-extrabold leading-tight text-black ">
+                Frequently Asked Questions(FAQ)
+            </h2>
+        </div>
+        <div class="max-w-3xl mx-auto mt-8 space-y-4 md:mt-16">
+            <div
+                class="transition-all duration-200 bg-white border border-gray-200 shadow-lg cursor-pointer hover:bg-gray-50">
+                <button type="button" id="question1" data-state="closed"
+                    class="flex items-center justify-between w-full px-4 py-5 sm:p-6">
+                    <span class="flex text-lg font-semibold text-black">How can I get started?</span>
+                    <svg id="arrow1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" class="w-6 h-6 text-gray-400">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                        </path>
+                    </svg>
+                </button>
+                <div id="answer1" style="display:none" class="px-4 pb-5 sm:px-6 sm:pb-6">
+                    <p>Getting started is easy! Sign up for an account, and you'll have access to our platform's
+                        features. No credit card required for the initial signup.</p>
+                </div>
             </div>
-            <div class="mx-auto mt-8 grid gap-5 sm:grid-cols-2 md:grid-cols-3 lg:max-w-none">
-                <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
-                    <div class="flex-shrink-0">
-                        <img class="h-48 w-full object-cover transition-transform duration-500 transform ease-in-out hover:scale-110"
-                            src="../static/images/procurements.webp" alt="" />
-                    </div>
-                    <div class="flex flex-1 flex-col justify-between bg-white p-6">
-                        <div class="flex-1">
-                            <p class="text-sm font-medium text-[#d13642]">
-                                <a href="{{ url_for('pages.blog') }}"
-                                    class="bell-regular font-medium hover:text-red-600">
-                                    read More
-                                    <span class="ml-1">&#8594;</span>
-                                </a>
-                            </p>
-                            <a href="#" class="mt-2 block">
-                                <p class="text-xl font-bold bell-bold text-gray-900">
-                                    Best won procurement case
-                                </p>
-                                <p
-                                    class="mt-4 text-sm md:text-md tracking-wide text-gray-900 md:text-base bell font-medium">
-                                    Our firm successfully defended a high-stakes procurement case, securing
-                                    a favorable outcome for our client and setting a
-                                    precedent in the industry.
-                                </p>
-                            </a>
-                        </div>
-                        <div class="flex space-x-1 text-sm  bell font-medium text-gray-500 mt-2">
-                            <time datetime="2020-03-16">Mar 16, 2020</time>
-                            <span aria-hidden="true">·</span>
-                            <span>6 min read</span>
-                        </div>
-                    </div>
+            <div
+                class="transition-all duration-200 bg-white border border-gray-200 shadow-lg cursor-pointer hover:bg-gray-50">
+                <button type="button" id="question2" data-state="closed"
+                    class="flex items-center justify-between w-full px-4 py-5 sm:p-6">
+                    <span class="flex text-lg font-semibold text-black">What is the pricing structure?</span>
+                    <svg id="arrow2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" class="w-6 h-6 text-gray-400">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                        </path>
+                    </svg>
+                </button>
+                <div id="answer2" style="display:none" class="px-4 pb-5 sm:px-6 sm:pb-6">
+                    <p>Our pricing structure is flexible. We offer both free and paid plans. You can choose the one
+                        that
+                        suits your needs and budget.</p>
                 </div>
-
-                <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
-                    <div class="flex-shrink-0">
-                        <img class="h-48 w-full object-cover transition-transform duration-500 transform ease-in-out hover:scale-110"
-                            src="../static/images/Corporate-Commercial.webp" alt="" />
-                    </div>
-                    <div class="flex flex-1 flex-col justify-between bg-white p-6">
-                        <div class="flex-1">
-                            <p class="text-sm font-medium text-indigo-600">
-                                <a href="{{ url_for('pages.blog') }}"
-                                    class="bell-regular font-medium text-[#d13642] hover:text-red-600">
-                                    read More
-                                    <span class="ml-1">&#8594;</span>
-                                </a>
-                            </p>
-                            <a href="#" class="mt-2 block">
-                                <p class="text-xl bell-bold font-bold text-gray-900">
-                                    How we handle commercial and corporate cases
-                                </p>
-                                <p
-                                    class="mt-4 text-sm md:text-md tracking-wide text-gray-900 md:text-base bell font-medium">
-                                    Discover our strategic approach to complex commercial and corporate
-                                    disputes. Learn how our expert team navigates legal
-                                    challenges, protects client interests, and delivers tailored solutions.
-                                </p>
-                            </a>
-                        </div>
-                        <div class="flex space-x-1 bell font-medium text-sm text-gray-500 mt-2">
-                            <time datetime="2020-03-10">Mar 10, 2020</time>
-                            <span aria-hidden="true">·</span>
-                            <span>4 min read</span>
-                        </div>
-                    </div>
+            </div>
+            <div
+                class="transition-all duration-200 bg-white border border-gray-200 shadow-lg cursor-pointer hover:bg-gray-50">
+                <button type="button" id="question3" data-state="closed"
+                    class="flex items-center justify-between w-full px-4 py-5 sm:p-6">
+                    <span class="flex text-lg font-semibold text-black">What kind of support do you provide?</span>
+                    <svg id="arrow3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" class="w-6 h-6 text-gray-400">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                        </path>
+                    </svg>
+                </button>
+                <div id="answer3" style="display:none" class="px-4 pb-5 sm:px-6 sm:pb-6">
+                    <p>We offer comprehensive customer support. You can reach out to our support team through
+                        various
+                        channels, including email, chat, and a knowledge base.</p>
                 </div>
-
-                <div class="flex flex-col hidden md:block overflow-hidden rounded-lg shadow-lg md:mb-0 mb-56">
-                    <div class="flex-shrink-0">
-                        <img class="h-48 w-full object-cover transition-transform duration-500 transform ease-in-out hover:scale-110"
-                            src="../static/images/home.webp" alt="" />
-                    </div>
-                    <div class="flex flex-1 flex-col justify-between bg-white p-6">
-                        <div class="flex-1">
-                            <p class="text-sm font-medium text-indigo-600">
-                                <a href="{{ url_for('pages.blog') }}"
-                                    class="bell-regular font-medium text-[#d13642] hover:text-red-600">
-                                    read More
-                                    <span class="ml-1">&#8594;</span>
-                                </a>
-                            </p>
-                            <a href="#" class="mt-2 block">
-                                <p class="text-xl bell-bold font-bold text-gray-900">
-                                    This is how we secured our client home.
-                                </p>
-                                <p
-                                    class="mt-4 text-sm md:text-md tracking-wide text-gray-900 md:text-base bell font-medium">
-                                    Witness the journey of securing a dream home. Explore our comprehensive
-                                    legal process, from initial consultation to
-                                    closing day, ensuring a smooth and successful transaction.
-                                </p>
-                            </a>
-                        </div>
-                        <div class="flex space-x-1 bell font-medium text-sm text-gray-500 mt-2">
-                            <time datetime="2020-02-12">Feb 12, 2020</time>
-                            <span aria-hidden="true">·</span>
-                            <span>11 min read</span>
-                        </div>
-                    </div>
+            </div>
+            <div
+                class="transition-all duration-200 bg-white border border-gray-200 shadow-lg cursor-pointer hover:bg-gray-50">
+                <button type="button" id="question4" data-state="closed"
+                    class="flex items-center justify-between w-full px-4 py-5 sm:p-6">
+                    <span class="flex text-lg font-semibold text-black">Can I cancel my subscription anytime?</span>
+                    <svg id="arrow4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" class="w-6 h-6 text-gray-400">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
+                        </path>
+                    </svg>
+                </button>
+                <div id="answer4" style="display:none" class="px-4 pb-5 sm:px-6 sm:pb-6">
+                    <p>Yes, you can cancel your subscription at any time without any hidden fees. We believe in
+                        providing a hassle-free experience for our users.</p>
                 </div>
             </div>
         </div>
-    </section>
+        <p class="text-center text-gray-600 textbase mt-9">
+            Still have questions?
+            <span
+                class="cursor-pointer font-medium text-tertiary transition-all duration-200 hover:text-tertiary focus:text-tertiary hover-underline">Contact
+                our support
+            </span>
+        </p>
+    </div>
+    <script>
+        // JavaScript to toggle the answers and rotate the arrows
+        document.querySelectorAll('[id^="question"]').forEach(function (button, index) {
+            button.addEventListener('click', function () {
+                var answer = document.getElementById('answer' + (index + 1));
+                var arrow = document.getElementById('arrow' + (index + 1));
+
+                if (answer.style.display === 'none' || answer.style.display === '') {
+                    answer.style.display = 'block';
+                    arrow.style.transform = 'rotate(0deg)';
+                } else {
+                    answer.style.display = 'none';
+                    arrow.style.transform = 'rotate(-180deg)';
+                }
+            });
+        });
+    </script>
+</section>
+
+
+
 
 
 
