--- a/api/templates/arbitration.html
+++ b/api/templates/arbitration.html
@@ -4,13 +4,13 @@
 
 {% block content %}
 <!--Banner component -->
-<div class="bg-cover bg-center mt-1 h-auto text-white py-24 px-10 object-fill"
+<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
     style="background-image: url(../static/images/Dispute-Resolution.webp)">
     <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        <h1 class="text-center bell-bold font-bold text-2xl lg:text-4xl text-[#d13642]">
+        <h1 class="text-center text-red-600   bell-extrabold  ">
             Arbitration and ADR
         </h1>
-        <p class="text-md bell font-bold sm:text-lg md:text-2xl text-center text-red-900">
+        <p class="bell-bolder text-center  text-red-600">
             Discover our commitment to excellence and client satisfaction.
         </p>
         <!-- <button href="#" class="bg-purple-800 py-4 px-8 text-white font-bold uppercase text-xs rounded hover:bg-gray-200 hover:text-gray-800"> -->
@@ -33,28 +33,30 @@
 </div>
 
 <!-- arbitration section -->
-<div class="sm:flex items-center max-w-7xl mx-auto">
-    <div class="sm:w-1/2 p-10">
-        <div class="image object-center text-center">
-            <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1" src="../staic/images/Dispute-Resolution.webp" srcset=""
-                alt="home" />
+<div class="bg-white">
+    <div class="sm:flex items-center max-w-7xl mx-auto">
+        <div class="sm:w-1/2 p-10">
+            <div class="image object-center text-center">
+                <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1" src="../static/images/Dispute-Resolution.webp"
+                    srcset="" alt="home" />
+            </div>
         </div>
-    </div>
-    <div class="sm:w-1/2 p-5 md:mb-0 mb-24 md:-mt-10">
-        <div class="text">
-            <span
-                class="text-gray-500 border-dotted md:text-xl sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">Arbitration
-                and ADR Law</span>
-            <h2 class="my-4 font-bold md:text-3xl sm:text-2xl text-xl bell-reular font-bold">
-                About <span class="text-red-900">Arbitration and ADR</span>
-            </h2>
-            <p class="text-gray-900 bell font-medium">
-                We provide legal services in banking and finance practice covering a
-                diverse range of subjects including commercial disputes, enforcement
-                of contracts, realization of securities, receivership, liquidations,
-                debt collection and all suits of civil claims, incorporation
-                (formation) of public and private companies.
-            </p>
+        <div class="sm:w-1/2 p-5 md:mb-0 mb-24 md:-mt-10">
+            <div class="text">
+                <span
+                    class="text-gray-500 border-dotted md:text-xl sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">Arbitration
+                    and ADR Law</span>
+                <h2 class="my-4 font-bold md:text-3xl sm:text-2xl text-xl bell-reular ">
+                    About <span class="text-red-900">Arbitration and ADR</span>
+                </h2>
+                <p class="text-gray-900 bell font-medium">
+                    We provide legal services in banking and finance practice covering a
+                    diverse range of subjects including commercial disputes, enforcement
+                    of contracts, realization of securities, receivership, liquidations,
+                    debt collection and all suits of civil claims, incorporation
+                    (formation) of public and private companies.
+                </p>
+            </div>
         </div>
     </div>
 </div>
