--- a/api/templates/constitutional.html
+++ b/api/templates/constitutional.html
@@ -4,13 +4,12 @@
 
 {% block content %}
 <!--Banner component -->
-<div class="bg-cover bg-center mt-1  h-auto text-white py-24 px-10 object-fill"
+<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
     style="background-image: url(../static/images/constitutional.webp)">
     <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        <!-- <p class="font-bold text-sm uppercase">Services</p> -->
-        <h1 class="text-center   bell-bold font-bold text-2xl lg:text-4xl  text-white ">Constitutional and
-            Administrative Law</h1>
-        <p class="text-md bell font-bold sm:text-xl md:text-2xl text-center text-white">
+        <h1 class="text-center md:text-white   bell-extrabold     text-[#d13642] ">Constitutional and Administrative Law
+        </h1>
+        <p class=" bell-bold text-center text-white">
             Discover our commitment to excellence and client satisfaction.
         </p>
         <!-- <button href="#" class="bg-purple-800 py-4 px-8 text-white font-bold uppercase text-xs rounded hover:bg-gray-200 hover:text-gray-800"> -->
@@ -35,20 +34,13 @@
     </div>
 </div>
 
-
-
-
-
-
-
 <!-- constitutional section -->
-
+<div class="bg-white">
 <div class="sm:flex items-center max-w-7xl mx-auto">
     <div class="sm:w-1/2 p-10">
         <div class="image object-center text-center ">
 
-            <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/constitutional.webp" srcset=""
-                alt="home">
+            <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/constitutional.webp" srcset="" alt="home">
         </div>
     </div>
     <div class="sm:w-1/2 p-5 md:mb-0 mb-24 md:-mt-5">
@@ -66,5 +58,6 @@
                 best way to resolve it. </p>
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
