--- a/api/templates/conveyance.html
+++ b/api/templates/conveyance.html
@@ -4,66 +4,67 @@
 
 {% block content %}
 <!--Banner component -->
-    <div class="bg-cover bg-center mt-1  h-auto text-white py-24 px-10 object-fill"
-        style="background-image: url(../static/images/counter.webp)">
-        <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-            <!-- <p class="font-bold text-sm uppercase">Services</p> -->
-           <h1 class="text-center   bell-bold font-bold text-2xl lg:text-4xl  text-[#d13642]  ">Conveyance and Securities Law</h1>
-            <p class="text-md bell font-bold sm:text-xl md:text-2xl text-center text-white">
-                Discover our commitment to excellence and client satisfaction.
+<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
+    style="background-image: url(../static/images/securities.webp)">
+    <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
+        <h1 class="text-center   bell-extrabold     text-[#d13642] ">Conveyance and Securities Law</h1>
+        <p class="bell-bold text-center text-[#d13642]">
+            Discover our commitment to excellence and client satisfaction.
+        </p>
+        <!-- <button href="#" class="bg-purple-800 py-4 px-8 text-white font-bold uppercase text-xs rounded hover:bg-gray-200 hover:text-gray-800"> -->
+
+        <!-- SVG Container -->
+        <div class="container mt-4 mx-auto max-w-7xl flex justify-center">
+            <svg fill="#000000" width="50px" height="50px" viewBox="0 0 24 24" id="down-arrow-circle"
+                data-name="Flat Color" xmlns="http://www.w3.org/2000/svg"
+                class="icon-container icon flat-color animate-bounce w-12 h-12" onclick="scrollToSection()">
+                <circle id="primary" cx="12" cy="12" r="10" style="fill: rgb(0, 0, 0);"></circle>
+                <path id="secondary"
+                    d="M14.14,13H13V7a1,1,0,0,0-2,0v6H9.86a1,1,0,0,0-.69,1.5l2.14,3.12a.82.82,0,0,0,1.38,0l2.14-3.12A1,1,0,0,0,14.14,13Z"
+                    style="fill: rgb(44, 169, 188);">
+                    Contact us
+                </path>
+
+            </svg>
+        </div>
+        <!-- </button> -->
+
+
+    </div>
+</div>
+
+
+
+
+
+
+
+<!-- conveyance section -->
+ <div class="bg-white">
+<div class="sm:flex items-center max-w-7xl mx-auto">
+    <div class="sm:w-1/2 p-10">
+        <div class="image object-center text-center ">
+            <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/securities.webp" srcset="" alt="home">
+        </div>
+
+    </div>
+    <div class="sm:w-1/2 p-5 md:mb-0 mb-24 md:-mt-20">
+        <div class="text">
+            <span
+                class="text-gray-500 border-dotted md:text-xl  sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">conveyance
+                and Securities Law</span>
+            <h2 class="my-4 font-bold md:text-3xl sm:text-2xl text-xl ">About <span class="text-red-900">conveyance
+                    and Securities</span>
+            </h2>
+            <p class="text-gray-900 bell font-bold">
+                We provide legal services in corporate and commercial practice covering a diverse range of subjects
+                including commercial disputes, enforcement of contracts, realization of securities, receivership,
+                liquidations, debt collection and all suits of civil claims, incorporation (formation) of public and
+                private companies.
             </p>
-            <!-- <button href="#" class="bg-purple-800 py-4 px-8 text-white font-bold uppercase text-xs rounded hover:bg-gray-200 hover:text-gray-800"> -->
-
-            <!-- SVG Container -->
-            <div class="container mt-4 mx-auto max-w-7xl flex justify-center">
-                <svg fill="#000000" width="50px" height="50px" viewBox="0 0 24 24" id="down-arrow-circle"
-                    data-name="Flat Color" xmlns="http://www.w3.org/2000/svg"
-                    class="icon-container icon flat-color animate-bounce w-12 h-12" onclick="scrollToSection()">
-                    <circle id="primary" cx="12" cy="12" r="10" style="fill: rgb(0, 0, 0);"></circle>
-                    <path id="secondary"
-                        d="M14.14,13H13V7a1,1,0,0,0-2,0v6H9.86a1,1,0,0,0-.69,1.5l2.14,3.12a.82.82,0,0,0,1.38,0l2.14-3.12A1,1,0,0,0,14.14,13Z"
-                        style="fill: rgb(44, 169, 188);">
-                        Contact us
-                    </path>
-
-                </svg>
-            </div>
-            <!-- </button> -->
-
-
         </div>
     </div>
-
-
-
-
-
-
-
-    <!-- conveyance section -->
-    <div class="sm:flex items-center max-w-7xl mx-auto">
-        <div class="sm:w-1/2 p-10">
-            <div class="image object-center text-center ">
-                <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/securities.webp" srcset="" alt="home">
-            </div>
-
-        </div>
-        <div class="sm:w-1/2 p-5 md:mb-0 mb-24 md:-mt-20">
-            <div class="text">
-                <span
-                    class="text-gray-500 border-dotted md:text-xl  sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">conveyance
-                    and Securities Law</span>
-                <h2 class="my-4 font-bold md:text-3xl sm:text-2xl text-xl ">About <span class="text-red-900">conveyance
-                        and Securities</span>
-                </h2>
-                <p class="text-gray-900 bell font-bold">
-                    We provide legal services in corporate and commercial practice covering a diverse range of subjects
-                    including commercial disputes, enforcement of contracts, realization of securities, receivership,
-                    liquidations, debt collection and all suits of civil claims, incorporation (formation) of public and
-                    private companies.
-                </p>
-            </div>
-        </div>
-    </div>
+</div>
+ </div>
 
 {% endblock %}
