--- a/api/templates/criminal.html
+++ b/api/templates/criminal.html
@@ -4,12 +4,11 @@
 
 {% block content %}
 <!--Banner component -->
-<div class="bg-cover bg-center mt-1  h-auto text-white py-24 px-10 object-fill"
+<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
     style="background-image: url(../static/images/criminal.webp)">
     <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        <!-- <p class="font-bold text-sm uppercase">Services</p> -->
-        <h1 class="text-center   bell-bold font-bold text-2xl lg:text-4xl  text-[#d13642] ">Criminal Law</h1>
-        <p class="text-red-600 text-md bell font-bold sm:text-xl md:text-2xl text-center text-white">
+        <h1 class="text-center   bell-extrabold     text-[#d13642] ">Criminal Law</h1>
+        <p class="bell-bold text-center text-white">
             Discover our commitment to excellence and client satisfaction.
         </p>
         <!-- <button href="#" class="bg-purple-800 py-4 px-8 text-white font-bold uppercase text-xs rounded hover:bg-gray-200 hover:text-gray-800"> -->
@@ -29,35 +28,41 @@
             </svg>
         </div>
         <!-- </button> -->
+
+
     </div>
 </div>
+
+
+
+
 
 
 
 <!-- criminal section -->
-<div class="sm:flex items-center max-w-7xl mx-auto">
-    <div class="sm:w-1/2 p-10">
-        <div class="image object-center text-center ">
-            <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/criminal.webp" srcset=""
-                alt="home">
+<div class="bg-white">
+    <div class="sm:flex items-center max-w-7xl mx-auto">
+        <div class="sm:w-1/2 p-10">
+            <div class="image object-center text-center ">
+                <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/criminal.webp" srcset="" alt="home">
+            </div>
         </div>
-    </div>
-    <div class="sm:w-1/2 p-5 md:mb-0 mb-24">
-        <div class="text font">
-            <span
-                class="text-gray-500 border-dotted md:text-xl  sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">
-                Crime Law
-            </span>
-            <h2 class="my-4 md:text-3xl sm:text-2xl text-xl font-bold bell-bold ">About <span
-                    class="text-red-900">Criminal Law</span>
-            </h2>
-            <p class="text-gray-900 bell font bold">
-                At Masika & Koross Advocates, we have extended our legal expertise in matters family ranging from
-                marriage, adoption, divorce, maintenance, succession, domestic violence, reconciliation, estate
-                planning etc. if you or your family have a legal concern, please get in touch and let us find the
-                best way to resolve it. </p>
+        <div class="sm:w-1/2 p-5 md:mb-0 mb-24">
+            <div class="text font">
+                <span
+                    class="text-gray-500 border-dotted md:text-xl  sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">
+                    Crime Law
+                </span>
+                <h2 class="my-4 md:text-3xl sm:text-2xl text-xl font-bold bell-bold ">About <span
+                        class="text-red-900">Criminal Law</span>
+                </h2>
+                <p class="text-gray-900 bell font bold">
+                    At Masika & Koross Advocates, we have extended our legal expertise in matters family ranging from
+                    marriage, adoption, divorce, maintenance, succession, domestic violence, reconciliation, estate
+                    planning etc. if you or your family have a legal concern, please get in touch and let us find the
+                    best way to resolve it. </p>
+            </div>
         </div>
     </div>
 </div>
-
 {% endblock %}
