--- a/api/templates/family.html
+++ b/api/templates/family.html
@@ -4,68 +4,63 @@
 
 {% block content %}
 <!--Banner component -->
-<div class="bg-cover bg-center mt-1  h-auto text-white py-24 px-10 object-fill"
-    style="background-image: url(../static/images/family.webp)">
-    <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        <!-- <p class="font-bold text-sm uppercase">Services</p> -->
-        <h1 class="text-center   bell-bold font-bold text-2xl lg:text-4xl  text-[#d13642] ">Family Law</h1>
-        <p class="text-md bell font-bold sm:text-xl md:text-2xl text-center text-red-600">
-            Discover our commitment to excellence and client satisfaction.
-        </p>
-        <!-- <button href="#" class="bg-purple-800 py-4 px-8 text-white font-bold uppercase text-xs rounded hover:bg-gray-200 hover:text-gray-800"> -->
+    <div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
+        style="background-image: url(../static/images/family.webp)">
+        <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
+            <h1 class="text-center   bell-extrabold     text-white">Family Law</h1>
+            <p class="bell-bold text-center text-white">
+                Discover our commitment to excellence and client satisfaction.
+            </p>
+            <!-- <button href="#" class="bg-purple-800 py-4 px-8 text-white font-bold uppercase text-xs rounded hover:bg-gray-200 hover:text-gray-800"> -->
 
-        <!-- SVG Container -->
-        <div class="container mt-4 mx-auto max-w-7xl flex justify-center">
-            <svg fill="#000000" width="50px" height="50px" viewBox="0 0 24 24" id="down-arrow-circle"
-                data-name="Flat Color" xmlns="http://www.w3.org/2000/svg"
-                class="icon-container icon flat-color animate-bounce w-12 h-12" onclick="scrollToSection()">
-                <circle id="primary" cx="12" cy="12" r="10" style="fill: rgb(0, 0, 0);"></circle>
-                <path id="secondary"
-                    d="M14.14,13H13V7a1,1,0,0,0-2,0v6H9.86a1,1,0,0,0-.69,1.5l2.14,3.12a.82.82,0,0,0,1.38,0l2.14-3.12A1,1,0,0,0,14.14,13Z"
-                    style="fill: rgb(44, 169, 188);">
-                    Contact us
-                </path>
+            <!-- SVG Container -->
+            <div class="container mt-4 mx-auto max-w-7xl flex justify-center">
+                <svg fill="#000000" width="50px" height="50px" viewBox="0 0 24 24" id="down-arrow-circle"
+                    data-name="Flat Color" xmlns="http://www.w3.org/2000/svg"
+                    class="icon-container icon flat-color animate-bounce w-12 h-12" onclick="scrollToSection()">
+                    <circle id="primary" cx="12" cy="12" r="10" style="fill: rgb(0, 0, 0);"></circle>
+                    <path id="secondary"
+                        d="M14.14,13H13V7a1,1,0,0,0-2,0v6H9.86a1,1,0,0,0-.69,1.5l2.14,3.12a.82.82,0,0,0,1.38,0l2.14-3.12A1,1,0,0,0,14.14,13Z"
+                        style="fill: rgb(44, 169, 188);">
+                        Contact us
+                    </path>
 
-            </svg>
-        </div>
-        <!-- </button> -->
-
-
-    </div>
-</div>
+                </svg>
+            </div>
+            <!-- </button> -->
 
 
-
-
-
-
-
-<!-- family section -->
-
-<div class="sm:flex items-center max-w-7xl mx-auto">
-    <div class="sm:w-1/2 p-10">
-        <div class="image object-center text-center ">
-
-
-            <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/family.webp" srcset=""
-                alt="home">
         </div>
     </div>
-    <div class="sm:w-1/2 p-5 md:mb- mb-24">
-        <div class="text font">
-            <span
-                class="text-gray-500 border-dotted md:text-xl  sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">Family
-                Law</span>
-            <h2 class="my-4 md:text-3xl sm:text-2xl text-xl font-bold bell-bold ">About <span
-                    class="text-red-900">Family Law</span>
-            </h2>
-            <p class="text-gray-900 bell font-bold">
-                At Masika & Koross Advocates, we have extended our legal expertise in matters family ranging from
-                marriage, adoption, divorce, maintenance, succession, domestic violence, reconciliation, estate
-                planning etc. if you or your family have a legal concern, please get in touch and let us find the
-                best way to resolve it. </p>
+
+
+
+
+
+
+
+    <!-- family section -->
+<div class="bg-white">
+    <div class="sm:flex items-center max-w-7xl mx-auto">
+        <div class="sm:w-1/2 p-10">
+            <div class="image object-center text-center ">
+
+
+                <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/family.webp" srcset="" alt="home">
+            </div></div>
+        <div class="sm:w-1/2 p-5 md:mb- mb-24">
+            <div class="text font">
+                <span class="text-gray-500 border-dotted md:text-xl  sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">Family Law</span>
+                <h2 class="my-4 md:text-3xl sm:text-2xl text-xl font-bold bell-bold ">About <span
+                        class="text-red-900">Family Law</span>
+                </h2>
+                <p class="text-gray-900 bell font-bold">
+                    At Masika & Koross Advocates, we have extended our legal expertise in matters family ranging from
+                    marriage, adoption, divorce, maintenance, succession, domestic violence, reconciliation, estate
+                    planning etc. if you or your family have a legal concern, please get in touch and let us find the
+                    best way to resolve it. </p>
+            </div>
         </div>
     </div>
 </div>
-
 {% endblock %}
