--- a/api/templates/health.html
+++ b/api/templates/health.html
@@ -4,13 +4,12 @@
 
 {% block content %}
 <!--Banner component -->
-<div class="bg-cover bg-center mt-1  h-auto text-white py-24 px-10 object-fill"
+<div class="bg-cover bg-center md:-mt-16    h-auto text-white py-24 px-10 object-fill"
     style="background-image: url(../static/images/health.webp)">
     <div class="md:w-full flex flex-col items-center justify-center md:mt-20">
-        <h1 class="text-center   bell-bold font-bold text-2xl lg:text-4xl  text-[#d13642] ">Pharmaceuticals and Health
-            Law
+        <h1 class="text-center   bell-extrabold     text-purple-900">Pharmaceuticals and Health Law
         </h1>
-        <p class="md:text-xl text-md mb-10 mt-4 text-blue-900 leading-none font-bold bell-bold">
+        <p class="text-center text-purple-900 bell-bold">
             Discover our commitment to excellence and client satisfaction.
         </p> <!-- SVG Container -->
         <div class="container mt-4 mx-auto max-w-7xl flex justify-center">
@@ -39,27 +38,28 @@
 
 
 <!-- health section -->
-
-<div class="sm:flex items-center max-w-7xl mx-auto">
-    <div class="sm:w-1/2 p-10">
-        <div class="image object-center text-center ">
-            <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/health.webp" srcset=""
-                alt="home">
+<div class="bg-white">
+    <div class="sm:flex items-center max-w-7xl mx-auto">
+        <div class="sm:w-1/2 p-10">
+            <div class="image object-center text-center ">
+                <img class="h-24 md:h-72 bg-blue-500 rounded-lg p-1 " src="../static/images/health.webp" srcset=""
+                    alt="home">
+            </div>
         </div>
-    </div>
-    <div class="sm:w-1/2 p-5 md:mb-0 mb-24">
-        <div class="text">
-            <span
-                class="text-gray-500 border-dotted md:text-xl  sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">Health
-                Law</span>
-            <h2 class="my-4 md:text-3xl sm:text-2xl text-xl font-bold bell-bold ">About <span
-                    class="text-red-900">Health</span>
-            </h2>
-            <p class="text-gray-900 font-bold bell">
-                At Masika & Koross Advocates, we have extended our legal expertise in matters family ranging from
-                marriage, adoption, divorce, maintenance, succession, domestic violence, reconciliation, estate
-                planning etc. if you or your family have a legal concern, please get in touch and let us find the
-                best way to resolve it. </p>
+        <div class="sm:w-1/2 p-5 md:mb-0 mb-24">
+            <div class="text">
+                <span
+                    class="text-gray-500 border-dotted md:text-xl  sm:text-lg text-md font-bold bell-bold border-b-2 border-indigo-600 uppercase">Health
+                    Law</span>
+                <h2 class="my-4 md:text-3xl sm:text-2xl text-xl font-bold bell-bold ">About <span
+                        class="text-red-900">Health</span>
+                </h2>
+                <p class="text-gray-900 font-bold bell">
+                    At Masika & Koross Advocates, we have extended our legal expertise in matters family ranging from
+                    marriage, adoption, divorce, maintenance, succession, domestic violence, reconciliation, estate
+                    planning etc. if you or your family have a legal concern, please get in touch and let us find the
+                    best way to resolve it. </p>
+            </div>
         </div>
     </div>
 </div>
